--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ input:focus, select:focus, textarea:focus{
   font-weight: 600;
   letter-spacing: .06em;
   text-transform: uppercase;
-  font-size: 50px;
+  font-size: 50 px;
   color: #0b0b0b;
 }
 
@@ -533,7 +533,7 @@ input:focus, select:focus, textarea:focus{
 /* Card derecha */
 .about__card{
   border: 1px solid #eee;
-  background: #fafafa;
+  background: #a59c45;
   border-radius: 16px;
   padding: 16px;
 }
